# EmberLib

./: .clang-format  .gitignore  CMakeLists.txt
EmberLib/: CMakeLists.txt
EmberLib/include/: arraylist_new.h  arraylist_old.h
EmberLib/src/: arraylist_new.c  main.c
demo/: CMakeLists.txt  demo.c
include/: arraylist_new.h  arraylist_old.h
include/EmberLib/: heap.h
include/EmberLib/IO/: EmberFile.h
include/EmberLib/Util/: BitArray.h  EmberDefines.h  EmberList.h  EmberMath.h  EmberString.h  EmberTimer.h
src/: CMakeLists.txt  arraylist_new.c  heap.c  main.c
src/IO/: EmberFile.c
src/Util/: BitArray.c  EmberList.c  EmberMath.c  EmberString.c  EmberTimer.c
tests/: CMakeLists.txt  check_arraylist_new.c  check_ember_string.c  check_emberlist.c  check_util.c  check_util.h
